paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/array_subscripting/sample_003/target.compile.log
error[E0599]: no method named `as_flatten` found for array `[[i32; 5]; 3]` in the current scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/array_subscripting/sample_003/target.rs:13:26
   |
13 |             let flat = x.as_flatten();
   |                          ^^^^^^^^^^
   |
help: there is a method `as_flattened` with a similar name
   |
13 |             let flat = x.as_flattened();
   |                                    ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.